Estructura del html semantico pero utilizando grid

--- a/html-semantico.html
+++ b/html-semantico.html
@@ -8,23 +8,17 @@
     <link rel="stylesheet" href="semantico.css">
 </head>
 <body>
-     <header>
-        <h1>Cabecera</h1>
-    </header>
-    <nav>
-        <h1>Navegador</h1>
-    </nav>
-    <main>
-        <section>
-            <h1>Seccion</h1>
-        </section>
-        <article>
-            <h1>Articulo</h1>
-        </article> 
-    </main>
-
-    <footer>
-        <h1>Pie de Pagina</h1> 
-    </footer> 
+    <div class="content">
+        <div class="items">NAV</div>
+        <div class="items">HEADER</div>
+        <div class="items-main">
+            <section>Section1</section>
+            <section>Section2</section>
+        </div>
+        <div class="items">FOOTER</div>
+    </div>
+   
+    
+    
 </body>
 </html>
